# Logger

./: CMakeLists.txt  ConsoleOutputStreamDecorator.cpp  ConsoleOutputStreamDecorator.h  ConsoleOutputStreamDecorator.hpp  FileOutputStreamDecorator.cpp  FileOutputStreamDecorator.h  FileOutputStreamDecorator.hpp  ILogger.h  ILogger.hpp  IOutputStream.h  IOutputStream.hpp  IOutputStreamFactory.cpp  IOutputStreamFactory.h  IOutputStreamFactory.hpp  Logger.cpp  Logger.h  Logger.hpp  LoggerCommon.cpp  LoggerCommon.h  LoggerCommon.hpp  build.bat
